--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,20 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+View the toy-app in action <a href ="http://ritwick-microposts-app.herokuapp.com/">here</a>
+<hr>
 
-Things you may want to cover:
+This application uses rails v 4.2.0 alond with other dependencies stated in the gemfile. 
+sqlite3, byebug and spring gems are only for development and testing purposes, for production postgress is being used which can be switched with any other database
 
-* Ruby version
+You need to migrate the database before using the program using rake 
+<code>bundle exec rake db:migrate</code>
+If using heroku, you can use
+<code>heroku run rake db:migrate</code>
 
-* System dependencies
+To run the local server navigate to the installation directory and use
+<code>rails server</code>
 
-* Configuration
+The databse(mysqlite3) can be accessed by 
+<code>rails console</code>
 
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
